--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Story+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  
+
+  <style>
+    body {
+      background: #f3a6b3
+      }
+  </style>
   <title>Meet Wanda Hurley</title>
 </head>
 <body>
@@ -16,18 +21,20 @@
       <div class="top-txt">
         <h1>Wanda Hurley</h1>
         <h2>Stylist/Colorist</h2>
-        <nav>
+      </div>  
+        <nav class="navbar">
           <ul>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="./gallery.html">Gallery</a></li>
             <li><a href="#">About</a></a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
-      </div>
         <img src="./wandas-pics/wandahurley.jpg" alt="Wanda Hurley" class="home-img">
         <img src="./wandas-pics/logo.png" alt="shear genius logo" class="logo">
     </div>    
   </header>
-   
+   <footer>
+      <div class="footer"><p>2025</p></div>
+   </footer>
 </body>
 </html>
