mobile about page complete

--- a/gallery.html
+++ b/gallery.html
@@ -21,19 +21,17 @@
 <body>
   <nav class="navbar home">
           <ul>
-            <li><a href="#">About</a></a></li>
+            <li><a href="./about.html">About</a></a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="./index.html">Home</a></li>
           </ul>
   <div class="img-gallery">
     <h2 class="shiny-text title">Cut</h2>
-    <div class="accent"></div>
     <img src="./wandas-pics/cut1.jpg" alt="hairstyle image">
     <img src="./wandas-pics/cut2.jpg" alt="hairstyle image">
     <img src="./wandas-pics/cut3.jpg" alt="hairstyle image">
     <img src="./wandas-pics/cut4.jpg" alt="hairstyle image">
     <h2 class="shiny-text title">Color</h2>
-    <div class="color-accent"></div>
     <img src="./wandas-pics/color1.jpg" alt="hairstyle image">
     <img src="./wandas-pics/color2.jpg" alt="hairstyle image">
     <img src="./wandas-pics/color3.jpg" alt="hairstyle image">
