--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar">
           <ul>
             <li><a href="./gallery.html">Gallery</a></li>
-            <li><a href="#">About</a></a></li>
+            <li><a href="./about.html">About</a></a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
