mobile about page complete

--- a/about.html
+++ b/about.html
@@ -21,16 +21,21 @@
   <title>Document</title>
 </head>
 <body>
-  <nav class="navbar home about-nav">
-          <ul>
-            <li><a href="#">Contact</a></li>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./gallery.html">Gallery</a></li>        
-          </ul>
-        </nav>
-  <div class="about-content">
-    <h1 class="about-title shiny-text">About Wanda,</h1>
-    <p class="about-text shiny-text">Trained at the Sassoon Academy of Cosmotology. With 20 years of experience as a Stylist & Color Specialist</p>
+  <div class="wrapper">
+    <nav class="navbar home about-nav">
+            <ul>
+              <li><a href="#">Contact</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./gallery.html">Gallery</a></li>
+            </ul>
+          </nav>
+    <div class="about-content">
+      <h1 class="about-title shiny-text">About Wanda,</h1>
+      <p class="about-text shiny-text">Trained at the Sassoon Academy of Cosmotology. With 20 years of experience as a Stylist & Color Specialist</p>
+    </div>
   </div>
+   <footer>
+        <div class="footer"><p>2025</p></div>
+     </footer>
 </body>
 </html>
