--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Story+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Story+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Gallery</title>
   <style>
@@ -19,10 +19,11 @@
   </style>
 </head>
 <body>
+  <h1 class="gallery-hdr home">Visual Portfolio</h1>
   <nav class="navbar home">
           <ul>
             <li><a href="./about.html">About</a></a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
             <li><a href="./index.html">Home</a></li>
           </ul>
   <div class="img-gallery">
