--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul>
             <li><a href="./gallery.html">Gallery</a></li>
             <li><a href="./about.html">About</a></a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </nav>
         <img src="./wandas-pics/wandahurley.jpg" alt="Wanda Hurley" class="home-img">
