mobile site complete

--- a/gallery.html
+++ b/gallery.html
@@ -27,12 +27,18 @@
             <li><a href="./index.html">Home</a></li>
           </ul>
   <div class="img-gallery">
-    <h2 class="shiny-text title">Cut</h2>
+    <div class="gallery-accent">
+      <h2 class="shiny-text title">Cut</h2>
+      <img src="./wandas-pics/gold-scissors.png" alt="gold scissors" style="width: 75px; margin: 0;" class="gallery-accent">
+    </div>
     <img src="./wandas-pics/cut1.jpg" alt="hairstyle image">
     <img src="./wandas-pics/cut2.jpg" alt="hairstyle image">
     <img src="./wandas-pics/cut3.jpg" alt="hairstyle image">
     <img src="./wandas-pics/cut4.jpg" alt="hairstyle image">
-    <h2 class="shiny-text title">Color</h2>
+    <div class="gallery-accent">
+      <h2 class="shiny-text title">Color</h2>
+      <img src="./wandas-pics/pallet.png" alt="paint pallet" style="width: 90px; margin: 0;" class="gallery-accent">
+    </div>
     <img src="./wandas-pics/color1.jpg" alt="hairstyle image">
     <img src="./wandas-pics/color2.jpg" alt="hairstyle image">
     <img src="./wandas-pics/color3.jpg" alt="hairstyle image">
