mobile site complete + home

--- a/index.html
+++ b/index.html
@@ -10,29 +10,37 @@
 
   <style>
     body {
-      background: #f3a6b3
+      background: #f3a6b3;
       }
   </style>
   <title>Meet Wanda Hurley</title>
 </head>
 <body>
   <header>
-    <div class="home">
+  <div class="home">
+    <nav class="navbar">
+      <ul>
+        <li><a href="./gallery.html">Gallery</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="grid-wrapper">
       <div class="top-txt">
         <h1>Wanda Hurley</h1>
         <h2>Stylist/Colorist</h2>
-      </div>  
-        <nav class="navbar">
-          <ul>
-            <li><a href="./gallery.html">Gallery</a></li>
-            <li><a href="./about.html">About</a></a></li>
-            <li><a href="./contact.html">Contact</a></li>
-          </ul>
-        </nav>
+        <!-- Add more intro text if you want -->
+      </div>
+      <div class="picture-frame">
         <img src="./wandas-pics/wandahurley.jpg" alt="Wanda Hurley" class="home-img">
-        <img src="./wandas-pics/logo.png" alt="shear genius logo" class="logo">
-    </div>    
-  </header>
+      </div>
+    </div>
+    <div class="logo-container">
+      <img src="./wandas-pics/logo.png" alt="shear genius logo" class="logo">
+    </div>
+  </div>
+</header>
+
    <footer>
       <div class="footer"><p>2025</p></div>
    </footer>
