--- a/contact.html
+++ b/contact.html
@@ -22,14 +22,15 @@
 </head>
 <body>
   <div class="wrapper">
-     <h1 class="contact-title shiny-text">Contact</h1>
     <nav class="navbar home contact-nav">
-            <ul>
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="./gallery.html">Gallery</a></li>
-              <li><a href="./about.html">About</a></li>
-            </ul>
-          </nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./gallery.html">Gallery</a></li>
+        <li><a href="./about.html">About</a></li>
+      </ul>
+    </nav>
+     <h1 class="contact-title shiny-text">Contact</h1>
+     <h2 class="contact-text shiny-text">&#128222; 123-456-7890</h2>
     <div class="contact-content">
       <form method="post" class="contact-form">
         <label for="name" class="label-txt">Name</label>
