--- a/gallery.html
+++ b/gallery.html
@@ -32,9 +32,9 @@
       <h2 class="shiny-text title">Cut</h2>
       <img src="./wandas-pics/gold-scissors.png" alt="gold scissors" style="width: 75px; margin: 0;" class="gallery-accent">
     </div>
-    <img src="./wandas-pics/cut1.jpg" alt="hairstyle image">
-    <img src="./wandas-pics/cut2.jpg" alt="hairstyle image">
-    <img src="./wandas-pics/cut3.jpg" alt="hairstyle image">
+    <img src="./wandas-pics/wanda1-editedcopy.png" alt="hairstyle image">
+    <img src="./wandas-pics/wanda2-editedcopy.png" alt="hairstyle image">
+    <img src="./wandas-pics/wanda3-editedcopy.png" alt="hairstyle image">
     <img src="./wandas-pics/cut4.jpg" alt="hairstyle image">
     <div class="gallery-accent">
       <h2 class="shiny-text title">Color</h2>
