--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Story+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Story+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    body {
-      background: #f3a6b3;
-      }
-  </style>
+  
   <title>Meet Wanda Hurley</title>
 </head>
 <body>
@@ -26,21 +22,28 @@
       </ul>
     </nav>
     <div class="grid-wrapper">
+      <div class="picture-frame">
+        <img src="./wandas-pics/wanda-salon.png" alt="Wanda Hurley" class="home-img">
+      </div>
       <div class="top-txt">
-        <h1>Wanda Hurley</h1>
-        <h2>Stylist/Colorist</h2>
+        <h1 class="bg-opac">Wanda Hurley</h1>
+        <h2 class="bg-opac">Stylist/Colorist</h2>
         <!-- Add more intro text if you want -->
       </div>
-      <div class="picture-frame">
-        <img src="./wandas-pics/wandahurley.jpg" alt="Wanda Hurley" class="home-img">
-      </div>
-    </div>
-    <div class="logo-container">
-      <img src="./wandas-pics/logo.png" alt="shear genius logo" class="logo">
     </div>
   </div>
 </header>
-
+  <main class="about">
+    <div class="about-content">
+      <h1 class="about-title">About the Artist,</h1>
+      <p class="about-text">
+        <img src="./wandas-pics/wanda-beach.jpg" alt="wanda at the beach" class="about-img">
+        Trained at the Fredericksburg Beauty Academy of Northern Virginia, Wanda brings over 30 years of artistry and experience as a hairstylist and Matrix color specialist.</p>
+    </div>
+      <div class="logo-container">
+        <img src="./wandas-pics/logo.png" alt="shear genius logo" class="logo">
+      </div>
+  </main>
    <footer>
       <div class="footer"><p>2025</p></div>
    </footer>
