about and footer

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Story+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-
+  <script src="https://kit.fontawesome.com/712be561a4.js" crossorigin="anonymous"></script>
   
   <title>Meet Wanda Hurley</title>
 </head>
@@ -27,7 +28,7 @@
       </div>
       <div class="top-txt">
         <h1 class="bg-opac">Wanda Hurley</h1>
-        <h2 class="bg-opac">Stylist/Colorist</h2>
+        <h2 class="bg-opac">Matrix Color specialist</h2>
         <!-- Add more intro text if you want -->
       </div>
     </div>
@@ -35,17 +36,36 @@
 </header>
   <main class="about">
     <div class="about-content">
-      <h1 class="about-title">About the Artist,</h1>
-      <p class="about-text">
+      <h1 class="about-title blue-text">About the Artist,</h1>
+      <p class="about-text blue-text">
         <img src="./wandas-pics/wanda-beach.jpg" alt="wanda at the beach" class="about-img">
-        Trained at the Fredericksburg Beauty Academy of Northern Virginia, Wanda brings over 30 years of artistry and experience as a hairstylist and Matrix color specialist.</p>
+        Trained at the Fredericksburg Beauty Academy of Northern Virginia,
+         Wanda brings over 30 years of artistry and experience as a hairstylist and Matrix color specialist.</p>
     </div>
       <div class="logo-container">
         <img src="./wandas-pics/logo.png" alt="shear genius logo" class="logo">
       </div>
   </main>
    <footer>
-      <div class="footer"><p>2025</p></div>
+      <div class="footer">
+        <div class="footer-format">
+          <div class="site-map blue-text">
+            <h2>Site Map</h2>
+            <ul>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./gallery.html">Gallery</a></li>
+              <li><a href=".about">About</a></li>
+              <li><a href="./contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="social">
+            <h2><i class="fa-brands fa-square-facebook blue-text"></i></h2>
+            <h2 class="blue-text"><i class="fa-solid fa-envelope blue-text"></i>wanda@hairbywanda.com</h2>
+          </div>
+        </div>
+        <p class="blue-text"> created © 2025</p>
+      </div>
+      
    </footer>
 </body>
 </html>
