rough home complete

--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
     <img src="./wandas-pics/color4.jpg" alt="hairstyle image">
   </div>
   <footer>
-      <div class="footer gallery-footer"><p>2025</p></div>
+      <div class="footer"><p>2025</p></div>
    </footer>
 </body>
 </html>
