--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Story+Script&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <style>
-    body { background: linear-gradient(160deg,#181818 0%,#222 35%,#000 100%); }
+    body { background: linear-gradient(160deg,#181818 0%,#222 35%,#111 100%); }
   </style>
 </head>
 <body>
@@ -23,6 +23,7 @@
 
   <div class="img-gallery">
     <h1 class="gallery-hdr">Visual Portfolio</h1>
+    <img src="./wandas-pics/scissors.png" alt="silver scissors" class="scissors">
     <div class="gallery"></div>
   </div>  
   <footer>
