--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <nav class="navbar">
       <ul>
         <li><a href="./gallery.html">Gallery</a></li>
-        <li><a href="./about.html">About</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -68,15 +67,23 @@
             <ul>
               <li><a href="./index.html">Home</a></li>
               <li><a href="./gallery.html">Gallery</a></li>
-              <li><a href=".about">About</a></li>
               <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
            <p class="blue-text">created © 2025</p>
         </div>
-       
       </div>
-      
    </footer>
+   <div class="contact-panel" id="contact-panel">
+  <form class="contact-form">
+    <h2>Contact Wanda</h2>
+    <input type="text" placeholder="Your Name" required>
+    <input type="email" placeholder="Email" required>
+    <textarea placeholder="Message"></textarea>
+    <button type="submit">Send</button>
+  </form>
+</div>
+<script type="module" src="main.js"></script>
+
 </body>
 </html>
