--- a/gallery.html
+++ b/gallery.html
@@ -15,9 +15,9 @@
 <body>
   <nav class="navbar">
     <ul>
-      <li><a href="./about.html">About</a></li>
-      <li><a href="./contact.html">Contact</a></li>
       <li><a href="./index.html">Home</a></li>
+      <li><a href="contact.html" class="contact-link">Contact</a>
+</li>
     </ul>
   </nav>
 
@@ -39,7 +39,6 @@
             <ul>
               <li><a href="./index.html">Home</a></li>
               <li><a href="./gallery.html">Gallery</a></li>
-              <li><a href=".about">About</a></li>
               <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
@@ -47,7 +46,6 @@
         </div>
       </div>
    </footer>
-
   <script type="module" src="main.js"></script>
 </body>
 </html>
