--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,12 @@
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden; /* No scrollbars */
 }
 
 .wrapper {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
-  position: fixed;
+  position: relative;
   top: 0; left: 0;
   background-image: url(./wandas-pics/Paper-Textures-7.jpg);
   color: #000;
