updated phone and email

--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,14 @@
   position: relative;
   background: linear-gradient(
   135deg,
-  #5260d7 0%,
-  #6c6e90  25%,
-  #7c91d1 40%,
-  #6c6e90 60%,
-  #5260d7 100%
+  #525fd773 0%,
+  #6c6e9077  25%,
+  #7c91d175 40%,
+  #6c6e9081 60%,
+  #525fd797 100%
   );
   color: #333333d7;
+ 
   z-index: 100;
   overflow-y: auto; /* allows scroll INSIDE the form if needed */
   box-sizing: border-box;
@@ -67,8 +68,8 @@
 <body>
   <div class="wrapper">
      <h1 class="contact-title">Contact</h1>
-     <h2 class="contact-phone">☎ - 123-456-7890</h2>
-     <h2 class="contact-email">✉ - wanda@wandahurley.com</h2>
+     <h2 class="contact-phone">☎-(843) 399-8703</h2>
+     <h2 class="contact-email">✉-wandahurley15@gmail.com</h2>
     <div class="contact-content">
       <button class="close-contact" id="close-contact">&times;</button>
       <form action="https://formspree.io/f/mzzykrag?next=https://yoursite.com/thankyou.html" 
