--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="about-content">
       <h1 class="about-title blue-text">About the Artist,</h1>
       <p class="about-text blue-text">
-        <img src="./wandas-pics/wanda-wings.jpg" alt="wanda at the beach" class="about-img">
+        <img src="./wandas-pics/salon-interior.jpg" alt="salon view" class="about-img">
         Trained at the Fredericksburg Beauty Academy of Northern Virginia,
          Wanda brings over 30 years of artistry and experience as a hairstylist and Matrix color specialist.</p>
     </div>
@@ -57,11 +57,6 @@
    <footer>
       <div class="footer">
         <div class="footer-format">
-          <div class="contact">
-            <h2>Contact</h2>
-            <h2>☎ - 123-456-7890</h2>
-            <h2>✉ - wanda@hairbywanda.com</h2>
-          </div>
           <div class="site-map">
             <h2>Site Map</h2>
             <ul>
@@ -69,6 +64,11 @@
               <li><a href="./gallery.html">Gallery</a></li>
               <li><a href="./contact.html">Contact</a></li>
             </ul>
+          </div>
+          <div class="contact">
+            <h2>Contact</h2>
+            <h2>☎-(843) 399-8703</h2>
+            <h2>✉-wandahurley15@gmail.com</h2>
           </div>
            <p class="blue-text">created © 2025</p>
         </div>
