updated phone and email

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
      <h2 class="contact-email">✉-wandahurley15@gmail.com</h2>
     <div class="contact-content">
       <button class="close-contact" id="close-contact">&times;</button>
-      <form action="https://formspree.io/f/mzzykrag?next=https://yoursite.com/thankyou.html" 
+      <form action="https://formspree.io/f/maqnakya?next=https://yoursite.com/thankyou.html" 
             method="post" class="contact-form" id="contact-form" autocomplete="off">
         <label for="name" class="label-txt">Name</label>
         <input type="text" name="name">
