updated phone and email

--- a/gallery.html
+++ b/gallery.html
@@ -31,8 +31,8 @@
         <div class="footer-format">
           <div class="contact">
             <h2>Contact</h2>
-            <h2>☎ - 123-456-7890</h2>
-            <h2>✉ - wanda@hairbywanda.com</h2>
+            <h2>☎-(843) 399-8703</h2>
+            <h2>✉-wandahurley15@gmail.com</h2>
           </div>
           <div class="site-map">
             <h2>Site Map</h2>
